--- a/css/style.css
+++ b/css/style.css
@@ -541,8 +541,34 @@ header .navbar ul li a:hover
 {
     background-color: #191e22;
     color: #6A6E71;
-    padding: 20px 0;
+    padding: 10px 0;
     text-align: center;
+    overflow: hidden;
+}
+
+.footer span
+{
+    float: left;
+}
+
+.footer ul
+{
+    list-style: none;
+    padding-left: 0;
+    margin:0;
+    float: right;
+}
+
+.footer ul li
+{
+    display: inline-block;
+    margin-left: 10px;
+}
+
+.footer ul li img
+{
+    width: 24px;
+    height: 24px;
 }
 /* end footer */
 
