--- a/css/style.css
+++ b/css/style.css
@@ -208,10 +208,16 @@ header .navbar ul li a:hover
     padding-bottom: 30px;
     overflow: hidden;
 }
-.myskills .skills ,
-.myskills .progress
+
+.myskills .skills
 {
     float: left;
+}
+
+.myskills .progress
+{
+    float: right;
+    padding-right: 100px;
 }
 
 .myskills .skills h2
